syntax = "proto2";

package ltpb;

message Point3F {
    required float x = 1;
    required float y = 2;
    required float z = 3;
}
