syntax = "proto2";

package ltpb;

message RectangleI {
    required int32 x = 1;
    required int32 y = 2;
    required int32 width = 3;
    required int32 height = 4;
}
