syntax = "proto2";

package ltpb;

enum SensorType {
    SENSOR_UNKNOWN = 0;
    SENSOR_AR835 = 1;
    SENSOR_AR1335 = 2;
    SENSOR_AR1335_MONO = 3;
    SENSOR_IMX386 = 4;
    SENSOR_IMX386_MONO = 5;
}
