syntax = "proto2";

package ltpb;

message ToFCalibration {
    required float offset_distance = 1;
    required float offset_measurement = 2;
    required float xtalk_distance = 3;
    required float xtalk_measurement = 4;
}
